milestone2-kubernetes/kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bv-web
  namespace: brent-verlinden
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bv-web
  template:
    metadata:
      labels:
        app: bv-web
    spec:
      containers:
      - name: web
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-content
        configMap:
          name: bv-web-html
