milestone2-kubernetes/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bv-api
  namespace: brent-verlinden
spec:
  selector:
    app: bv-api
  ports:
  - port: 8000
    targetPort: 8000
