milestone2-kubernetes/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bv-ingress
  namespace: brent-verlinden
spec:
  rules:
  - host: brent-verlinden.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bv-web
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: bv-api
            port:
              number: 8000
